--- a/src/index.css
+++ b/src/index.css
@@ -1,18 +1,30 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+:root{
+  --org-color:#ff6b01;
+  --yellow-color:#fdc20c;
+  --mid-yell:#ffdf86;
+  --main-bg:#ffe8bc;
+  --txt-color:#1f1f1f;
+}
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
 }
 
+h1,h2,h3,h4,p{
+  color: var(--txt-color)!important;
+}
 html {
   scroll-behavior: smooth;
 }
 
 body {
-  background-color: #ffffff;
+  background-color: var(--main-bg);
   margin: 0;
   font-family: "Lato", sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -71,8 +83,10 @@ button {
 .homeSlide {
   display: flex;
   justify-content: center;
-  background-color: #f6f9fc;
+  background: radial-gradient(circle at 10% 20%, rgb(255, 200, 124) 0.1%, rgb(252, 251, 121) 90%);
   padding-bottom: 0 !important;
+  margin: 30px 50px;
+  border-radius: 50px;
 }
 
 /*   ---Shop Pages---   */
@@ -91,6 +105,10 @@ button {
 @media (max-width: 767px) {
   .filter-bar .row {
     gap: 20px;
+  }
+  .homeSlide {
+    margin: 10px;
+    border-radius: 20px;
   }
 }
 
