fix footer and cart section

--- a/src/components/Footer/style.css
+++ b/src/components/Footer/style.css
@@ -1,7 +1,6 @@
 footer {
-  background-color: #0f3460;
+  background-color: var(--mid-yell);
   padding: 80px 0;
-  color: #fff;
 }
 
 footer .box {
