--- a/src/components/Loader/loader.css
+++ b/src/components/Loader/loader.css
@@ -14,13 +14,13 @@
 
 .preloader {
 	text-align: center;
-	max-width: 20em;
+	max-width: 10em;
 	width: 100%;
     position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 1.5rem;
+  	top: 50%;
+  	left: 50%;
+  	transform: translate(-50%, -50%);
+  	font-size: 1.5rem;
     
 }
 
@@ -41,8 +41,8 @@
 .loaderCart {
 	display: block;
 	margin: 0 auto 1.5em auto;
-	width: 8em;
-	height: 8em;
+	width: 4em;
+	height: 4em;
 }
 .loaderCart__lines,
 .loaderCart__top,
@@ -52,7 +52,7 @@
 	animation: loaderCartLines 2s ease-in-out infinite;
 }
 .loaderCart__lines {
-	stroke: var(--primary);
+	stroke: var(--org-color);
 }
 .loaderCart__top {
 	animation-name: loaderCartTop;
